pastWorkPage+Pics7:40pm5-20-20

--- a/pastwork.html
+++ b/pastwork.html
@@ -14,31 +14,25 @@
     <div class="container">
       <nav class="navbar">
         <ul>
-          <li><a href="#home">HOME</a></li>
-          <li><a href="#about">ABOUT</a></li>
-          <li><a href="#past-work">PAST WORK</a></li>
+          <li><a href="/index.html#home">HOME</a></li>
+          <li><a href="#kitchen-before">PAST WORK</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
       </nav>
-      <section id="home">
-        <h1 id="tommy-day">Tommy Day</h1>
-        <h2 id="master-carpenter">Master Carpenter</h2>
-        <p id="custom-carpentry">
-          Custom Carpentry from a carpenter with 40+ years of experience.
+      <section id="previous-work">
+        <a id="previous-work" href="#kitchen-before">My Previous Work</a>
+        <p id="scroll-for-pictures">
+          scroll down for pictures
         </p>
-        <img class="wood-divider" src="/wood-divider.png" alt="wood-divider" />
       </section>
-      <section id="about">
-        <h1>About Me</h1>
-        <p>
-          A Florida Native, I've been doing carpentry almost my entire life, I 
-          currently reside in the Niceville, FL.
-        </p>
-        <img class="wood-divider2" src="/wood-divider.png" alt="wood-divider" />
+      <section id="kitchen-before">
+        <p id="kitchen-remodeling">Kitchen Remodeling</p>
+        <h1 id="h1-kitchen-before">before</h1>
+        <a href="#kitchen-after" id="after">after</a>
       </section>
-      <section id="past-work">
-        <h1><a href="/pastwork.html">My Past Work</a></h1>
-        <img class="wood-divider3" src="/wood-divider.png" alt="wood-divider" />
+      <section id="kitchen-after">
+        <h1>after</h1>
+        <a href="#kitchen-before" id="before">before</a>
       </section>
       <section id="contact">
         <h1>Contact Me</h1>
