pantryAdded+changes 11:33pm 5-21-20

--- a/pastwork.html
+++ b/pastwork.html
@@ -33,6 +33,13 @@
       <section id="kitchen-after">
         <h1>after</h1>
         <a href="#kitchen-before" id="before">before</a>
+        <a href="#pantry" id="more-pantry">pantry</a>
+      </section>
+      <section id="pantry">
+        <a href="#kitchen-after" id="back-to-kitchen">kitchen</a>
+        <h1>pantry</h1>
+        <h1 id="pantry-before">before</h1>
+        <h1 id="pantry-after">after</h1>
       </section>
       <section id="contact">
         <h1>Contact Me</h1>
