--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
           <li><a href="#home">HOME</a></li>
           <li><a href="#about">ABOUT</a></li>
-          <li><a href="#past-work">PAST WORK</a></li>
+          <li><a href="/pastwork.html">PAST WORK</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
       </nav>
